# wyrd-shaper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONCEPT.md  CREDITS.md  LICENSE  wyrdshaper.cabal
app/: Main.hs  Spell.hs  Tilemap.hs
src/: Wyrdshaper.hs
src/Wyrdshaper/: Editor.hs  Engine.hs  Glyph.hs  Loop.hs  Spell.hs  Spellbook.hs  Terrain.hs  Tilemap.hs  World.hs  Worldgen.hs
