cabal-version:      3.14
name:               wyrdshaper
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Farrell
maintainer:         farrellm@alum.mit.edu
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable wyrdshaper
    import:           warnings
    main-is:          Main.hs
    other-modules:    Tilemap
    -- other-extensions:
    build-depends:
        base ^>=4.21.2.0,
        aztecs        >=0.17.1 && <0.18,
        aztecs-gl     >=0.3    && <0.4,
        aztecs-glfw   >=0.2    && <0.3
    hs-source-dirs:   app
    default-language: GHC2024
