cabal-version:      3.14
name:               wyrdshaper
version:            0.1.0.0
synopsis:           A top-down action-adventure where magic is a programming language
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Farrell
maintainer:         farrellm@alum.mit.edu
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Wyrdshaper
                      Wyrdshaper.Engine
                      Wyrdshaper.Loop
    build-depends:    base ^>=4.21.2.0,
                      aztecs ==0.17.1,
                      aztecs-glfw ==0.2.0,
                      aztecs-gl ==0.3.0,
                      aztecs-transform ==0.3.2,
                      GLFW-b >=3.3
    hs-source-dirs:   src
    default-language: GHC2024

executable wyrdshaper
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.2.0,
                      wyrdshaper
    hs-source-dirs:   app
    default-language: GHC2024
