cabal-version:      3.14
name:               wyrdshaper
version:            0.1.0.0
synopsis:           A top-down action-adventure where magic is a programming language
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Farrell
maintainer:         farrellm@alum.mit.edu
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Wyrdshaper
                      Wyrdshaper.Editor
                      Wyrdshaper.Engine
                      Wyrdshaper.Glyph
                      Wyrdshaper.Loop
                      Wyrdshaper.Spell
                      Wyrdshaper.Spellbook
                      Wyrdshaper.Terrain
                      Wyrdshaper.Tilemap
                      Wyrdshaper.World
                      Wyrdshaper.Worldgen
    build-depends:    base ^>=4.21.2.0,
                      apecs ^>=0.10,
                      sdl2 ^>=2.5.5,
                      sdl2-image ^>=2.1,
                      sdl2-ttf ^>=2.1,
                      containers >=0.7,
                      linear >=1.22,
                      text >=2.0,
                      vector >=0.13
    hs-source-dirs:   src
    default-language: GHC2024

executable wyrdshaper
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.2.0,
                      wyrdshaper
    hs-source-dirs:   app
    default-language: GHC2024
